--- a/proposal.html
+++ b/proposal.html
@@ -262,15 +262,37 @@ Add style to the movements and wrap up project.
   </li>
   <li>
     <div class="checkbox checkbox-on"></div>
-    <span class="to-do-children-checked">Reach Goal] Implement IK methods for arm model: SMCM with interpolation for trajectory smoothing</span>
+    <span class="to-do-children-checked">[Reach Goal] Implement IK methods for arm model: SMCM with interpolation for trajectory smoothing</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">SMCM writeup</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">SMCM writeup</span>
+    <span class="to-do-children-unchecked">Update lib, make OrbitControls.js work without Three.js module</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Refactor JS to use modules</span>
+    <span class="to-do-children-unchecked">Refactor JS</span>
+    <ul class="to-do-list">
+      <li>
+        <div class="checkbox checkbox-on"></div>
+        <span class="to-do-children-checked">demo.js</span>
+      </li>
+      <li>
+        <div class="checkbox checkbox-off"></div>
+        <span class="to-do-children-unchecked">demoUtils.js</span>
+      </li>
+      <li>
+        <div class="checkbox checkbox-off"></div>
+        <span class="to-do-children-unchecked">methodsIK.js</span>
+      </li>
+      <li>
+        <div class="checkbox checkbox-off"></div>
+        <span class="to-do-children-unchecked">manipulationUtils.js</span>
+      </li>
+    </ul>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
