MOdified milestone & proposal

--- a/milestone.html
+++ b/milestone.html
@@ -81,6 +81,7 @@ This should be about 1 page long if printed. You should briefly summarize what y
 
 <h3>IK Method: Damped Least Squares</h3>
 My Descent into Madness, a 4-part comedy
+Here you can see me working through my misunderstandings and confusion. I came to several wrong conclusions here, but I figured it out eventually. I then found out that several pages up on one of the papers I read, they had explained each term which would've been helpful before I figured everything out. Moral of the story is to read everything, or at least skim.
 
 <figure>
   <img src="./images/mydescentintomadnesspt1.jpg" />
