--- a/proposal.html
+++ b/proposal.html
@@ -269,8 +269,8 @@ Add style to the movements and wrap up project.
     <span class="to-do-children-checked">SMCM writeup</span>
   </li>
   <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Update lib, make OrbitControls.js work without Three.js module</span>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Update lib, make OrbitControls.js work without Three.js module</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
@@ -281,8 +281,8 @@ Add style to the movements and wrap up project.
         <span class="to-do-children-checked">demo.js</span>
       </li>
       <li>
-        <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">demoUtils.js</span>
+        <div class="checkbox checkbox-on"></div>
+        <span class="to-do-children-checked">demoUtils.js</span>
       </li>
       <li>
         <div class="checkbox checkbox-off"></div>
