--- a/refactor/iktjd3.html
+++ b/refactor/iktjd3.html
@@ -14,9 +14,11 @@
 
 <script src="./lib/external/dat.gui.min.js"></script>
 <script src="./lib/external/stats.js"></script>
+<script src="./lib/math.js"></script>
 <script src="./lib/external/three.js"></script>
 <script src="./lib/external/OrbitControls.js"></script>
 
+<script src="./lib/matrix.js"></script>
 <script src="./lib/manipulationUtils.js"></script>
 <script src="./lib/methodsIK.js"></script>
 <script src="./lib/demoUtils.js"></script>
