--- a/proposal.html
+++ b/proposal.html
@@ -281,34 +281,32 @@ Add style to the movements and wrap up project.
         <span class="to-do-children-checked">demo.js</span>
       </li>
       <li>
-        <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">demoUtils.js</span>
+        <div class="checkbox checkbox-on"></div>
+        <span class="to-do-children-checked">demoUtils.js</span>
       </li>
       <li>
-        <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">methodsIK.js</span>
+        <div class="checkbox checkbox-on"></div>
+        <span class="to-do-children-checked">methodsIK.js</span>
       </li>
       <li>
-        <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">manipulationUtils.js</span>
+        <div class="checkbox checkbox-on"></div>
+        <span class="to-do-children-checked">manipulationUtils.js</span>
       </li>
     </ul>
   </li>
   <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Rewrite to not use Three.js Vector3/Matrix3 + greater flexibility in number of DoF + joints</span>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Rewrite to not use Three.js Vector3/Matrix3 + greater flexibility in number of DoF + joints</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Create Vector class</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Create Matrix class?</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Add explanations about GUI options</span>
+    <span class="to-do-children-unchecked">Debug rewritten code</span>
+    <ul class="to-do-list">
+      <li>
+        <div class="checkbox checkbox-off"></div>
+        <span class="to-do-children-unchecked">Debug predicting point from beta logic -- rotation, then rotatiion + position</span>
+      </li>
+    </ul>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
@@ -317,6 +315,10 @@ Add style to the movements and wrap up project.
   <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Stylization</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Add explanations about GUI options</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
