Only works with  all constraints on

--- a/proposal.html
+++ b/proposal.html
@@ -304,7 +304,15 @@ Add style to the movements and wrap up project.
     <ul class="to-do-list">
       <li>
         <div class="checkbox checkbox-off"></div>
+        <span class="to-do-children-unchecked">Works when all constraints enabled. Behaves strangely with some constraints off. Look into how I deal with disabled constraints.</span>
+      </li>
+      <li>
+        <div class="checkbox checkbox-off"></div>
         <span class="to-do-children-unchecked">Debug predicting point from beta logic -- rotation, then rotatiion + position</span>
+      </li>
+      <li>
+        <div class="checkbox checkbox-off"></div>
+        <span class="to-do-children-unchecked">Debug predicting point from beta logic -- rotatiion + position</span>
       </li>
     </ul>
   </li>
