--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,11 @@ Eunice Chan | <i>August 14, 2020</i>
 <br />
 Inverse Kinematics with Three Translational Joints (1 degree of freedom each)
 <p><a href="./translation/iktjd3.html">Fullscreen here.</a></p>
-<iframe style="width:100%;height:50vw" src="./translation/iktjd3.html"></iframe>
+<iframe style="width:100%;height:50vw" src="./translation/iktjd1.html"></iframe>
+<br />
+Inverse Kinematics with Three Translational Joints (3 degrees of freedom each)
+<p><a href="./translation/iktjd3.html">Fullscreen here.</a></p>
+<iframe style="width:100%;height:50vw" src="./refactor/iktjd3.html"></iframe>
 <!-- <h1>Instructions</h1>
 <ul>
   <li>WASD to move target point along the X-Z axes.</li>
