Update target pose

--- a/proposal.html
+++ b/proposal.html
@@ -273,8 +273,8 @@ Add style to the movements and wrap up project.
     <span class="to-do-children-checked">Update lib, make OrbitControls.js work without Three.js module</span>
   </li>
   <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Refactor JS</span>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Refactor JS</span>
     <ul class="to-do-list">
       <li>
         <div class="checkbox checkbox-on"></div>
@@ -299,6 +299,16 @@ Add style to the movements and wrap up project.
     <span class="to-do-children-checked">Rewrite to not use Three.js Vector3/Matrix3 + greater flexibility in number of DoF + joints</span>
   </li>
   <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Put current version of code on demo page.</span>
+  </li>
+</ul>
+<ul>
+  <li>Now there are two demos! One with 1 DOF per joint and another with 3.</li>
+  <li>Ideally, I fix the bugs so that I can combine them (select/deselect constraints) and it goes back to just one demo.</li>
+</ul>
+<ul class="to-do-list">
+  <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Debug rewritten code</span>
     <ul class="to-do-list">
@@ -308,7 +318,7 @@ Add style to the movements and wrap up project.
       </li>
       <li>
         <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">Debug predicting point from beta logic -- rotation, then rotatiion + position</span>
+        <span class="to-do-children-unchecked">Debug predicting point from beta logic -- not full XYZ position, rotation, then rotation + position</span>
       </li>
       <li>
         <div class="checkbox checkbox-off"></div>
