rotation works, but not position, and not both together (cry)

--- a/proposal.html
+++ b/proposal.html
@@ -318,11 +318,11 @@ Add style to the movements and wrap up project.
       </li>
       <li>
         <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">Debug predicting point from beta logic -- not full XYZ position, rotation, then rotation + position</span>
+        <span class="to-do-children-unchecked">Debug predicting point from beta logic -- rotation</span>
       </li>
       <li>
         <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">Debug predicting point from beta logic -- rotatiion + position</span>
+        <span class="to-do-children-unchecked">Debug predicting point from beta logic -- rotation + position</span>
       </li>
     </ul>
   </li>
