Works but very slow and inefficient esp when not using XYZ only

--- a/proposal.html
+++ b/proposal.html
@@ -577,6 +577,12 @@ Add style to the movements and wrap up project.
         <li>Paper on LM for IK</li>
       </ul>
   </li>
+  <li>
+      <a href="https://medium.com/unity3danimation/overview-of-jacobian-ik-a33939639ab2">https://medium.com/unity3danimation/overview-of-jacobian-ik-a33939639ab2</a>
+      <ul>
+        <li>Details on IK Jacobian</li>
+      </ul>
+  </li>
 </ul>
 </body>
 </html>
