--- a/proposal.html
+++ b/proposal.html
@@ -309,30 +309,30 @@ Add style to the movements and wrap up project.
 </ul>
 <ul class="to-do-list">
   <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Debug rewritten code</span>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">General bug fixes</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Debug rewritten code</span>
     <ul class="to-do-list">
       <li>
-        <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">Works when all constraints enabled. Behaves strangely with some constraints off. Look into how I deal with disabled constraints.</span>
+        <div class="checkbox checkbox-on"></div>
+        <span class="to-do-children-checked">Works when all constraints enabled. Behaves strangely with some constraints off. Look into how I deal with disabled constraints.</span>
       </li>
       <li>
-        <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">Debug predicting point from beta logic -- rotation</span>
+        <div class="checkbox checkbox-on"></div>
+        <span class="to-do-children-checked">Debug predicting point from beta logic -- rotation</span>
       </li>
       <li>
-        <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">Debug predicting point from beta logic -- rotation + position</span>
+        <div class="checkbox checkbox-on"></div>
+        <span class="to-do-children-checked">Debug predicting point from beta logic -- rotation + position</span>
       </li>
     </ul>
   </li>
   <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">[Reach Goal] Implement IK methods for arm model: Selectively damped least squares</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Stylization</span>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">[Reach Goal] Add multiple degrees of freedom</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
@@ -340,9 +340,21 @@ Add style to the movements and wrap up project.
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">General bug fixes</span>
+    <span class="to-do-children-unchecked">Currently very slow. Make more efficient/optimize!</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">[Reach Goal] Include more joints (rotational and otherwise)</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">[Reach Goal] Implement IK methods for arm model: Selectively damped least squares</span>
   </li>
   <b>Thursday+</b>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Make final deliverable presentation</span>
+  </li>
   <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Write final deliverable writeup report (referencing the currently written writeup)</span>
@@ -353,18 +365,19 @@ Add style to the movements and wrap up project.
   </li>
 </ul>
 <h3>Reach Goals</h3>
+<p>Things I didn't end up doing for the project, but had once considered.</p>
 <ul class="to-do-list">
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">[Reach Goal] Add multiple degrees of freedom</span>
+    <span class="to-do-children-unchecked">[Reach Goal] Limit movement range for IK</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">[Reach Goal] Include more joints (rotational and otherwise)</span>
+    <span class="to-do-children-unchecked">[Reach Goal] Stylization</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">[Reach Goal] Limit movement range for IK (Show can reach if near. Otherwise, constrained by distance)</span>
+    <span class="to-do-children-unchecked">[Reach Goal] Arm model: Selectively damped least squares</span>
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
@@ -376,7 +389,7 @@ Add style to the movements and wrap up project.
   </li>
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">[Reach Goal] Implement IK methods for the other figures</span>
+    <span class="to-do-children-unchecked">[Reach Goal] Implement IK methods for extra models</span>
     <ul class="to-do-list">
       <li>
         <div class="checkbox checkbox-off"></div>
@@ -401,36 +414,7 @@ Add style to the movements and wrap up project.
     </ul>
   </li>
 </ul>
-<!-- <li>
-<div class="checkbox checkbox-off">
-</div>
-<span class="to-do-children-unchecked">Todo Unchecked</span>
-</li>
-<li>
-<div class="checkbox checkbox-off">
-</div>
-<span class="to-do-children-unchecked">Todo Unchecked</span>
-</li>
-<li>
-<div class="checkbox checkbox-off">
-</div>
-<span class="to-do-children-unchecked">Todo Unchecked</span>
-</li>
-<li>
-<div class="checkbox checkbox-on">
-</div>
-<span class="to-do-children-checked">Todo Item</span>
-</li>
-<li>
-<div class="checkbox checkbox-on">
-</div>
-<span class="to-do-children-checked">Todo Item</span>
-</li>
-<li>
-<div class="checkbox checkbox-on">
-</div>
-<span class="to-do-children-checked">Todo Item</span>
-</li> -->
+
 <h2>Interesting Resources and Cool Links</h2>
 <ul>
   <li>
