--- a/report.html
+++ b/report.html
@@ -20,5 +20,14 @@ Eunice Chan | <i>August 14, 2020</i>
 <br />
 <br />
 <h2>The Report</h2>
+<h2>Statistics</h2>
+<p><a href="https://github.com/eunice-chan/CS184-Final-Project">Github Repo</a></p>
+<ul>
+  <li>Created August 1, 2020.</li>
+  <li>Committed daily from August 1 til August 12.</li>
+  <li>5 branches.</li>
+  <li>56 total commits.</li>
+  <li>3 distinct versions of the demo.</li>
+</ul>
 </body>
 </html>
