--- a/demo.html
+++ b/demo.html
@@ -26,6 +26,14 @@ Inverse Kinematics with Three Translational Joints (1 degree of freedom each)
 Inverse Kinematics with Three Translational Joints (3 degrees of freedom each)
 <p><a href="./v2/iktjd3.html">Fullscreen here.</a></p>
 <iframe style="width:100%;height:50vw" src="./v2/iktjd3.html"></iframe>
+<br />
+<br />
+<br />
+<br />
+Inverse Kinematics with Three Joints (custom degrees of freedom each)
+<p><a href="./v3/ikajdc.html">Fullscreen here.</a></p>
+<iframe style="width:100%;height:50vw" src="./v3/ikajdc.html"></iframe>
+
 <!-- <h1>Instructions</h1>
 <ul>
   <li>WASD to move target point along the X-Z axes.</li>
